// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Section Menu 1`] = `
<div>
  <div
    class="section-menu"
  >
    <a
      class="sc-bdfBwQ dBSomw section-item"
      color=""
    >
      facilitate
    </a>
    <a
      class="sc-bdfBwQ eHIKPq section-item active"
      color=""
    >
      administration
    </a>
    <a
      class="sc-bdfBwQ dBSomw section-item"
      color=""
    >
      invoice
    </a>
    <a
      class="sc-bdfBwQ dBSomw section-item"
      color=""
    >
      bandwidth
    </a>
  </div>
</div>
`;

exports[`renders Section Menu with customizations 1`] = `
<div>
  <div
    class="section-menu"
  >
    <a
      class="sc-bdfBwQ EUqGI section-item active"
      color="green"
    >
      facilitate
    </a>
    <a
      class="sc-bdfBwQ bSISot section-item"
      color="green"
    >
      administration
    </a>
    <a
      class="sc-bdfBwQ bSISot section-item"
      color="green"
    >
      invoice
    </a>
    <a
      class="sc-bdfBwQ bSISot section-item"
      color="green"
    >
      bandwidth
    </a>
  </div>
</div>
`;
